<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scroll_favorite"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".presentation.favorite.FavoriteFragment">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingVertical="16dp">

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guide_left"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_begin="16dp" />

		<androidx.constraintlayout.widget.Guideline
			android:id="@+id/guide_right"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintGuide_end="16dp" />

		<TextView
			android:id="@+id/header_movies"
			style="@style/TextAppearance.MaterialComponents.Headline6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:text="@string/title_movie"
			app:layout_constraintLeft_toRightOf="@id/guide_left"
			app:layout_constraintTop_toTopOf="parent" />

		<FrameLayout
			android:id="@+id/placeholder_movies"
			android:layout_width="match_parent"
			android:layout_height="296dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@id/header_movies">

			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center" />
		</FrameLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_movies"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:visibility="gone"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintTop_toTopOf="@id/placeholder_movies"
			tools:listitem="@layout/list_movie_grid" />

		<TextView
			android:id="@+id/header_tv"
			style="@style/TextAppearance.MaterialComponents.Headline6"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="16dp"
			android:text="@string/title_tv_show"
			app:layout_constraintLeft_toRightOf="@id/guide_left"
			app:layout_constraintTop_toBottomOf="@id/placeholder_movies" />

		<FrameLayout
			android:id="@+id/placeholder_tv"
			android:layout_width="match_parent"
			android:layout_height="360dp"
			android:layout_marginTop="8dp"
			app:layout_constraintTop_toBottomOf="@id/header_tv">

			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center" />
		</FrameLayout>

		<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/rv_tv"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:visibility="gone"
			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
			app:layout_constraintTop_toTopOf="@id/placeholder_tv"
			tools:listitem="@layout/list_movie_grid" />
	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>